--- a/index.html
+++ b/index.html
@@ -1,64 +1,157 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Karl Dulce — Portfolio</title>
-
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;700&family=Bricolage+Grotesque:wght@600;700;800&display=swap" rel="stylesheet">
-
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          fontFamily: {
-            lexend: ['Lexend', 'sans-serif'],
-            bricolage: ['Bricolage Grotesque', 'sans-serif'],
-          },
-          animation: {
-            'slide-left': 'slideLeft 1s ease-out forwards',
-            'slide-right': 'slideRight 1s ease-out forwards',
-            'photo-in': 'photoIn 1.1s ease-out forwards',
-          },
-          keyframes: {
-            slideLeft: {
-              '0%': { transform: 'translateX(-80px)', opacity: '0' },
-              '100%': { transform: 'translateX(0)', opacity: '1' },
-            },
-            slideRight: {
-              '0%': { transform: 'translateX(80px)', opacity: '0' },
-              '100%': { transform: 'translateX(0)', opacity: '1' },
-            },
-            photoIn: {
-              '0%': { transform: 'rotate(0deg) scale(0.95)', opacity: '0' },
-              '100%': { transform: 'rotate(2deg) scale(1)', opacity: '1' },
-            },
-          },
-        },
-      },
-    }
-  </script>
+    <base target="_self">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Karl's Portfolio | Editorial Cyber Minimalist Design</title>
+    <meta name="description" content="Professional portfolio of Karl - English Language Studies student, artist, and creative professional with expertise in writing, design, and digital art.">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- Google Fonts: Lexend -->
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:wght@600;700;800&display=swap" rel="stylesheet">
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        'editorial-black': '#121212',
+                        'editorial-gray': '#2d2d2d',
+                        'editorial-light': '#f8f8f8',
+                        'accent-blue': '#3a86ff',
+                        'accent-cyan': '#00bbf9',
+                        'glass-dark': 'rgba(18, 18, 18, 0.7)',
+                        'glass-light': 'rgba(45, 45, 45, 0.5)',
+                        'cyber-dark': '#0a0f19',
+                        'cyber-darker': '#050811',
+                    },
+                    fontFamily: {
+                        'lexend': ['Lexend', 'sans-serif'],
+                        'orbitron': ['Orbitron', 'sans-serif'],
+                    },
+                    backdropBlur: {
+                        'glass': '12px',
+                    },
+                    boxShadow: {
+                        'editorial': '0 8px 32px rgba(0, 0, 0, 0.1)',
+                        'editorial-strong': '0 12px 48px rgba(0, 0, 0, 0.15)',
+                        'glass': '0 8px 32px rgba(0, 0, 0, 0.3)',
+                    },
+                    animation: {
+                        'pulse-subtle': 'pulse-subtle 3s ease-in-out infinite',
+                        'float': 'float 6s ease-in-out infinite',
+                    },
+                    keyframes: {
+                        'pulse-subtle': {
+                            '0%, 100%': { 'opacity': '0.7' },
+                            '50%': { 'opacity': '1' },
+                        },
+                        'float': {
+                            '0%, 100%': { transform: 'translateY(0)' },
+                            '50%': { transform: 'translateY(-10px)' },
+                          fontFamily: {
+  lexend: ['Lexend', 'sans-serif'],
+  orbitron: ['Orbitron', 'sans-serif'],
+  bricolage: ['Bricolage Grotesque', 'sans-serif'],
+},
+                        }
+                    }
+                }
+            }
+        }
+    </script>
+    <style>
+        html {
+            scroll-behavior: smooth;
+        }
+        body {
+            background: linear-gradient(135deg, #ffffff 0%, #f8f8f8 50%, #f0f0f0 100%);
+            background-attachment: fixed;
+            color: #121212;
+        }
+        .glass-panel {
+            background: rgba(255, 255, 255, 0.7);
+            backdrop-filter: blur(12px);
+            border: 1px solid rgba(0, 0, 0, 0.1);
+        }
+        .glass-card {
+            background: rgba(255, 255, 255, 0.5);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(0, 0, 0, 0.08);
+        }
+        .text-glow {
+            text-shadow: 0 0 10px rgba(58, 134, 255, 0.3);
+        }
+        .gradient-text {
+            background: linear-gradient(90deg, #121212, #2d2d2d);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+        .gradient-border {
+            position: relative;
+            border: 2px solid transparent;
+            background: linear-gradient(#ffffff, #ffffff) padding-box,
+                        linear-gradient(90deg, #121212, #2d2d2d) border-box;
+        }
+        .nav-link::after {
+            content: '';
+            position: absolute;
+            width: 0;
+            height: 2px;
+            bottom: -5px;
+            left: 0;
+            background: linear-gradient(90deg, #121212, #2d2d2d);
+            transition: width 0.3s ease;
+        }
+        .nav-link:hover::after {
+            width: 100%;
+        }
+        .project-card {
+            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
+        .project-card:hover {
+            transform: translateY(-10px) scale(1.02);
+        }
+        .typewriter {
+            overflow: hidden;
+            border-right: 2px solid #2d2d2d;
+            white-space: nowrap;
+            animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
+        }
+        @keyframes typing {
+            from { width: 0 }
+            to { width: 100% }
+        }
+        @keyframes blink-caret {
+            from, to { border-color: transparent }
+            50% { border-color: #2d2d2d }
+        }
+    </style>
 </head>
+<body class="min-h-screen text-editorial-black font-lexend overflow-x-hidden">
+    <!-- Navigation -->
+    <header class="fixed top-0 left-0 right-0 z-50">
+        <nav class="glass-panel py-4 px-6">
+            <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
+                <div class="flex items-center space-x-2 mb-4 md:mb-0">
+                    <div class="w-3 h-3 rounded-full bg-editorial-black animate-pulse-subtle"></div>
+                    <h1 class="font-lexend text-xl font-bold text-editorial-black tracking-tight">KARL DULCE</h1>
+                </div>
+                <div class="flex space-x-8">
+                    <a href="#top" class="nav-link relative font-lexend text-sm font-medium hover:text-editorial-gray transition-colors duration-300">HOME</a>
+                    <a href="#about" class="nav-link relative font-lexend text-sm font-medium hover:text-editorial-gray transition-colors duration-300">ABOUT</a>
+                    <a href="#projects" class="nav-link relative font-lexend text-sm font-medium hover:text-editorial-gray transition-colors duration-300">PROJECTS</a>
+                    <a href="cv.html" class="nav-link relative font-lexend text-sm font-medium hover:text-editorial-gray transition-colors duration-300">CV</a>
+                    <a href="#contact" class="nav-link relative font-lexend text-sm font-medium hover:text-editorial-gray transition-colors duration-300">CONTACT</a>
+                </div>
+            </div>
+        </nav>
+    </header>
 
-<body class="bg-white text-black overflow-x-hidden">
-
-<!-- NAV -->
-<header class="fixed top-0 left-0 right-0 z-50 bg-white">
-  <nav class="max-w-7xl mx-auto px-10 py-6 flex justify-between items-center">
-    <h1 class="font-lexend font-medium text-sm tracking-wide">Karl Dulce</h1>
-    <div class="flex gap-8 text-xs uppercase tracking-widest">
-      <a href="#about" class="hover:opacity-60">About</a>
-      <a href="#projects" class="hover:opacity-60">Projects</a>
-      <a href="#contact" class="hover:opacity-60">Contact</a>
-    </div>
-  </nav>
-</header>
-
-<!-- HERO -->
+    <!-- HERO -->
 <section id="top" class="min-h-screen flex flex-col items-center justify-center pt-24 relative">
 
   <!-- KA PHOTO RL -->
@@ -68,7 +161,7 @@
       KA
     </h1>
 
-    <div class="w-[22vw] max-w-[260px] opacity-0 animate-photo-in">
+    <div class="w-[22vw] max-w-[260px] opacity-0 animate-photo-in animate-float">
       <img
         src="images/karl_pogi.jpg"
         alt="Portrait of Karl"
@@ -85,17 +178,17 @@
   <!-- Subtitle + Buttons -->
   <div class="mt-12 flex flex-col items-center gap-6">
 
-    <p class="text-[11px] tracking-widest uppercase text-center">
+    <p class="text-[11px] tracking-widest uppercase text-center text-editorial-gray">
       English Language Studies • Creative Artist • Digital Designer
     </p>
 
     <div class="flex gap-4">
       <a href="#projects"
-         class="text-xs uppercase tracking-widest border border-black px-5 py-2 hover:bg-black hover:text-white transition">
+         class="text-xs uppercase tracking-widest border border-editorial-black px-5 py-2 hover:bg-editorial-black hover:text-white transition">
         Explore Works
       </a>
       <a href="#contact"
-         class="text-xs uppercase tracking-widest border border-black px-5 py-2 hover:bg-black hover:text-white transition">
+         class="text-xs uppercase tracking-widest border border-editorial-black px-5 py-2 hover:bg-editorial-black hover:text-white transition">
         Connect With Me
       </a>
     </div>
@@ -104,7 +197,7 @@
 
 </section>
 
-<!-- About Section -->
+    <!-- About Section -->
     <section id="about" class="py-20 px-6 bg-white">
         <div class="container mx-auto">
             <div class="text-center mb-16">
@@ -456,6 +549,5 @@
             });
         });
     </script>
-
 </body>
 </html>
